--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,12 @@
     "react-dom": "^16.8.6"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "parcel-bundler": "^1.12.3"
+  },
+  "scripts": {
+    "start": "parcel index.html --port ${PORT:-9000} --open"
   }
 }
