--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "description": "Chat server",
   "main": "index.js",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "socket.io": "^2.2.0"
   }
 }
