--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
   "main": "index.js",
   "dependencies": {
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "socket.io-client": "^2.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
