--- a/client/package.json
+++ b/client/package.json
@@ -6,15 +6,18 @@
   "description": "Chat client",
   "main": "index.js",
   "dependencies": {
+    "material-design-icons": "^3.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "socket.io-client": "^2.2.0"
   },
   "devDependencies": {
+    "autoprefixer": "^9.6.1",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "parcel-bundler": "^1.12.3"
+    "parcel-bundler": "^1.12.3",
+    "sass": "^1.22.3"
   },
   "scripts": {
     "start": "parcel index.html --port ${PORT:-9000} --open"
