--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.17.1",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "uuid": "^3.3.2"
   }
 }
