--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "description": "Chat client",
   "main": "index.js",
   "dependencies": {
+    "js-cookie": "^2.2.0",
     "material-design-icons": "^3.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
